# Mama

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  deploy.sh  mama.spec  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: tests.yml
bench/: bench_config_overhead.py  repos.txt
docs/: build_behavior.md  demo_cast.py  record_demo.sh
mama/: __init__.py  _version.py  add_dependencies.py  artifactory.py  artifactory_package.py  asset.py  async_file_reader.py  build_config.py  build_dependency.py  build_insights.py  build_scheduler.py  build_target.py  cmake_compiler_cache.py  cmake_configure.py  command_line.py  dependency_chain.py  dependency_source.py  git.py  init_project.py  local_source.py  main.py  mama.py  msbuild.py  package.py  papa_deploy.py  papa_upload.py  parse_mamafile.py  system.py  util.py
mama/types/: artifactory_pkg.py  dep_source.py  git.py  local_source.py
mama/utils/: build_display.py  dir_lock.py  gdb.py  gnu_project.py  gtest.py  log_writer.py  mama_ssh.py  nonblocking_io.py  proc_cpu.py  run.py  ssh_multiplex.py  sub_process.py  system.py
src/mama/: __init__.py  dependency_chain.py  main.py  papa_deploy.py
test/example_consumer/: CMakeLists.txt  mamafile.py
test/example_library/: CMakeLists.txt  library.cpp  library.h  main.cpp  mama.py  mamafile.py
tests/: conftest.py  testutils.py
tests/test/example_library/: CMakeLists.txt  library.cpp
tests/test_archive_progress/: test_archive_progress.py
tests/test_artifactory_404_status/: test_artifactory_404_status.py
tests/test_artifactory_noise/: test_artifactory_noise.py
tests/test_artifactory_shim/: test_network_flag.py  test_shim_buildtarget.py  test_shim_guards.py  test_shim_load_integration.py  test_shim_marker.py  test_shim_probe.py
tests/test_build_banner/: test_build_banner.py
tests/test_build_config/: test_build_config.py
tests/test_build_dir/: test_build_dir.py
tests/test_build_display/: test_build_display.py
tests/test_build_insights/: test_build_insights.py
tests/test_build_scheduler/: test_build_scheduler.py
tests/test_build_shim_cache/: test_build_shim_cache.py
tests/test_buildstats/: test_buildstats.py
tests/test_buildtimes/: test_buildtimes.py
tests/test_clang_stdlib/: test_clang_stdlib.py
tests/test_clean_only/: test_clean_only.py
tests/test_clean_sweep/: test_clean_sweep.py
tests/test_clone_timing/: test_clone_timing.py
tests/test_cmake_cache_repair/: test_cmake_cache_repair.py
tests/test_compile_commands/: test_compile_commands.py
tests/test_compiler_cache/: test_compiler_cache.py  test_flag_isolation.py
tests/test_compiler_scoped_dirs/: test_compiler_mismatch_warning.py  test_compiler_scoped_dirs.py
tests/test_configure_build_split/: test_configure_build_split.py
tests/test_console_progress/: test_console_progress.py
tests/test_coverage_report/: test_coverage_report.py
tests/test_deps_only/: test_deps_only.py
(+50 files in other folders)
